# markov-scriptorium

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  dev.sh  stop.sh
.claude/: start-ticket.md
backend/: pyproject.toml
backend/migrations/: 0001_initial.sql  0002_scryfall_cards.sql  0003_scryfall_refresh.sql  0004_cards_fts.sql  0005_inventory.sql
backend/scripts/: seed_dev.py
backend/src/scriptorium/: __init__.py  catalog.py  db.py  inventory.py  main.py  migrations.py
backend/src/scriptorium/api/: __init__.py  cards.py  inventory.py  onboarding.py
backend/src/scriptorium/onboarding/: __init__.py  csv_import.py  decklist.py  resolution.py
backend/src/scriptorium/scryfall/: __init__.py  bulk.py  importer.py  refresh.py
backend/tests/: test_cards_api.py  test_catalog.py  test_csv_import.py  test_db.py  test_decklist_parser.py  test_health.py  test_inventory.py  test_inventory_api.py  test_migrations.py  test_onboarding_api.py  test_onboarding_parse_api.py  test_onboarding_parse_csv_api.py  test_onboarding_resolution.py  test_schema_cards.py  test_schema_inventory.py  test_schema_refresh.py  test_scryfall_bulk.py  test_scryfall_importer.py  test_scryfall_refresh.py  test_scryfall_status.py
docs/: PROJECT.md
docs/decisions/: 0001-foundational-architecture.md  0002-desktop-shell-tauri-sidecar.md  0003-framework-and-tooling.md  0004-schema-migrations.md  0005-scryfall-card-schema.md  0006-bulk-import.md  (+10 more)
frontend/: .gitignore  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts  vitest.config.ts
(+35 files in other folders)
