[project]
name = "scriptorium"
version = "0.1.0"
description = "Backend API for The Markov Scriptorium — a Magic: The Gathering collection catalog."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scriptorium"]

[tool.pytest.ini_options]
testpaths = ["tests"]
