[project]
name = "scriptorium"
version = "0.1.0"
description = "Backend API for The Markov Scriptorium — a Magic: The Gathering collection catalog."
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "httpx>=0.27",
    "ijson>=3.2",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.15.17",
    "mypy>=2.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scriptorium"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
# pycodestyle, pyflakes, isort, pyupgrade, flake8-bugbear, comprehensions, simplify.
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
# ijson ships no type stubs.
module = "ijson.*"
ignore_missing_imports = true
